--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -7,15 +7,14 @@
     "types": []
   },
   "include": [
-    "**/*.ts",
-
+    "**/*.ts"
   ],
   "exclude": [
     "**/*.spec.ts"
   ],
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
-    "strictInjectionParameters": true,
+    "strictInjectionParameters": false,
     "preserveWhitespaces": true
   }
 }
