--- a/angular.json
+++ b/angular.json
@@ -20,8 +20,14 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.scss"
             ],
+            "stylePreprocessorOptions": {
+              "includePaths": [
+                "src/styles"
+              ]
+            },
             "scripts": [],
             "customWebpackConfig": {
               "path": "./angular.webpack.js"
