--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "@angular/animations": "^10.0.0 || ^11.0.0-0",
     "@angular/cdk": "10.1.2",
     "@angular/forms": "^10.0.0 || ^11.0.0-0",
-    "@angular/material": "10.1.2"
+    "@angular/material": "10.1.2",
+    "electron-store": "6.0.0"
   }
 }
