--- a/angular.json
+++ b/angular.json
@@ -6,6 +6,7 @@
     "angular-electron": {
       "root": "",
       "sourceRoot": "src",
+      "prefix": "app",
       "projectType": "application",
       "architect": {
         "build": {
