--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -13,11 +13,13 @@
       "node_modules/@types"
     ],
     "lib": [
-      "es2017",
-      "es2016",
-      "es2015",
+      "es2018",
       "dom"
-    ]
+    ],
+    "paths": {
+      "@app/*": ["app/*"],
+      "@env/*": ["environments/*"]
+    }
   },
   "files": [
     "src/main.ts",
