--- a/package.json
+++ b/package.json
@@ -98,6 +98,10 @@
     "@angular/cdk": "10.1.2",
     "@angular/forms": "^10.0.0 || ^11.0.0-0",
     "@angular/material": "10.1.2",
-    "electron-store": "6.0.0"
+    "@types/cheerio": "0.22.21",
+    "@types/node-xlsx": "0.15.0",
+    "cheerio": "1.0.0-rc.3",
+    "electron-store": "6.0.0",
+    "node-xlsx": "0.15.0"
   }
 }
